-Added merged yaml file

--- a/src/msg_and_cmd_config.yml
+++ b/src/msg_and_cmd_config.yml
@@ -2,24 +2,24 @@ modules:
   CFE:
     telemetry:
       CFE_SB_HKMsg_t:
-        message_id: 0x1806
-        symbol: 'CFE_SB_HKMsg_t'
+        msgID: 0x1806
+        struct: 'CFE_SB_HKMsg_t'
         macro: 'CFE_SB_HK_TLM_MID'
       CFE_SB_StatMsg_t:
-        message_id: 0x080A
-        symbol: 'CFE_ES_EarlyInitFuncPtr_t'
+        msgID: 0x080A
+        struct: 'CFE_ES_EarlyInitFuncPtr_t'
         macro: 'CFE_SB_STATS_TLM_MID'
 
     commands:
       CFE_ES_NoopCmd:
-        message_id: 0x1806
+        msgID: 0x1806
         command_code: 0
-        symbol: 'CFE_SB_CmdHdr_t'
+        struct: 'CFE_SB_CmdHdr_t'
         macro: 'CFE_ES_CMD_MID'
       CFE_ES_ResetCmd:
-        message_id: 0x1806
+        msgID: 0x1806
         command_code: 1
-        symbol: 'CFE_SB_CmdHdr_t'
+        struct: 'CFE_SB_CmdHdr_t'
         macro: 'CFE_ES_CMD_MID'
 
     events:
