-Fixed command length issues -Added functionality to flatten structs in yamcs-flavored xtce

--- a/src/xtce_generator/config.yaml
+++ b/src/xtce_generator/config.yaml
@@ -22,4 +22,7 @@ spacesystems:
   SCH:
     remap:
       CFE_SB_MsgId_t: 'BaseType/uint16_LE'
+  TO:
+    remap:
+      CFE_SB_MsgId_t: 'BaseType/uint16_LE'
 
