--- a/config_remap.yaml
+++ b/config_remap.yaml
@@ -2,5 +2,7 @@
 # You can remap database symbols in this config file
 remaps:
   CFE_SB_MsgId_t: uint16
-
+  # CFE_ES_MemHandle_t is a void* that is wrapped in a macro. For now we are assuming 32-bit void*, which is the word size
+  # of our machine. You can get this number in linux with the 'getconf WORD_BIT' command.
+  CFE_ES_MemHandle_t: uint32
 
