-Fixed base container references -TODO: For next version, user config file need to be revisited -TODO: For next version, workflow needs to be revisited

--- a/src/xtce_generator/config.yaml
+++ b/src/xtce_generator/config.yaml
@@ -1,11 +1,11 @@
 # The global settings affect every namespace except for the root namespace/spacesystem since the root spacesystem is
-# merely used as an abstraction that may represent anything such as a vehicule, particular mission or even a hardware
+# merely used as an abstraction that may represent anything such as a vehicle, particular mission or even a hardware
 # architecture. This is particularly useful when users want to decouple the protocol(an example is ccsds) from the payload
 # data, which can be done by passing a BaseContainer reference.
 global:
   TelemetryMetaData:
     BaseContainer:
-      container_ref: 'cfs-ccsds/cfs-tlm-hdr'
+      container_ref: 'cfs-ccsds'
       #size is in bits
       size: 96
 
