--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,8 @@ language: python
 script:
   python3 squeezer.py  --spacesystem ocpoc --yaml_path tlm_cmd_merger/src/combined.yml --output_file newdb.sqlite --verbosity 4 --remap_yaml config_remap.yaml --xtce_config_yaml ./xtce_generator/src/xtce_generator/config.yaml
 
-
+git:
+  submodules_depth: 100
 
 include:
   - os: linux
