--- a/.travis.yml
+++ b/.travis.yml
@@ -10,12 +10,11 @@ install:
   - sudo apt-get -y install libsqlite3-dev
   - sudo apt-get -y install --reinstall make
   - sudo apt install build-essential
-
+  - pip3 install -r requirements.txt
+  - pip3 install -r tlm_cmd_merger/requirements.txt
+  - pipr install -r xtce_generator/requirements.txt
 
 script:
-  pip3 install -r requirements.txt
-  pip3 install -r tlm_cmd_merger/requirements.txt
-  pipr install -r xtce_generator/requirements.txt
   python3 squeezer.py  --spacesystem ocpoc --yaml_path tlm_cmd_merger/src/combined.yml --output_file newdb.sqlite --verbosity 4 --remap_yaml config_remap.yaml --xtce_config_yaml ./xtce_generator/src/xtce_generator/config.yaml
 
 git:
