--- a/.travis.yml
+++ b/.travis.yml
@@ -15,10 +15,7 @@ install:
   - pip3 install -r xtce_generator/requirements.txt
 
 script:
-  python3 squeezer.py  --spacesystem ocpoc --yaml_path tlm_cmd_merger/src/combined.yml --output_file newdb.sqlite --verbosity 4 --remap_yaml config_remap.yaml --xtce_config_yaml ./xtce_generator/src/xtce_generator/config.yaml
-
-git:
-  submodules_depth: 100
+  pytest
 
 include:
   - os: linux
