--- a/sql_entries.yml
+++ b/sql_entries.yml
@@ -1,192 +1,192 @@
-# The order in which table are defined in the yaml file matter for now. This is because if something
-# using a foreign key of something that is defined in this yaml file. In the fu
+# The order in which tables are defined in the yaml file matters for now. This is because if something
+# using a foreign key of something that is defined in this yaml file.
 
-tables:
-  symbols:
-  - name: HK_PX4_SensorAccelMsg_t
-    elf: ../airliner/build/squeaky_weasel/default/target/exe/airliner
-    byte_size: 84
-  - name: HK_PX4_SensorBaroMsg_t
-    elf: ../airliner/build/squeaky_weasel/default/target/exe/airliner
-    byte_size: 24
 
-  fields:
-    - symbol: HK_PX4_SensorAccelMsg_t
-      name: HK_PX4_SensorAccelMsg_t_Spare1
-      byte_offset: 12
-      type: uint32
-      multiplicity: 0
-      little_endian: 1 # 1 means true; 0 means false
+symbols:
+- name: HK_PX4_SensorAccelMsg_t
+  elf: ../airliner/build/squeaky_weasel/default/target/exe/airliner
+  byte_size: 84
+- name: HK_PX4_SensorBaroMsg_t
+  elf: ../airliner/build/squeaky_weasel/default/target/exe/airliner
+  byte_size: 24
 
-    - symbol: HK_PX4_SensorAccelMsg_t
-      name: HK_PX4_SensorAccelMsg_t_Timestamp
-      byte_offset: 16
-      type: uint64
-      multiplicity: 0
-      little_endian: 1 # 1 means true; 0 means false
+fields:
+  - symbol: HK_PX4_SensorAccelMsg_t
+    name: HK_PX4_SensorAccelMsg_t_Spare1
+    byte_offset: 12
+    type: uint32
+    multiplicity: 0
+    little_endian: 1 # 1 means true; 0 means false
 
-    - symbol: HK_PX4_SensorAccelMsg_t
-      name: HK_PX4_SensorAccelMsg_t_ErrorCount
-      byte_offset: 24
-      type: uint64
-      multiplicity: 0
-      little_endian: 1 # 1 means true; 0 means false
+  - symbol: HK_PX4_SensorAccelMsg_t
+    name: HK_PX4_SensorAccelMsg_t_Timestamp
+    byte_offset: 16
+    type: uint64
+    multiplicity: 0
+    little_endian: 1 # 1 means true; 0 means false
 
-    - symbol: HK_PX4_SensorAccelMsg_t
-      name: HK_PX4_SensorAccelMsg_t_Temperature
-      byte_offset: 32
-      type: float
-      multiplicity: 0
-      little_endian: 1 # 1 means true; 0 means false
+  - symbol: HK_PX4_SensorAccelMsg_t
+    name: HK_PX4_SensorAccelMsg_t_ErrorCount
+    byte_offset: 24
+    type: uint64
+    multiplicity: 0
+    little_endian: 1 # 1 means true; 0 means false
 
-    - symbol: HK_PX4_SensorAccelMsg_t
-      name: HK_PX4_SensorAccelMsg_t_XRaw
-      byte_offset: 36
-      type: int16
-      multiplicity: 0
-      little_endian: 1 # 1 means true; 0 means false
+  - symbol: HK_PX4_SensorAccelMsg_t
+    name: HK_PX4_SensorAccelMsg_t_Temperature
+    byte_offset: 32
+    type: float
+    multiplicity: 0
+    little_endian: 1 # 1 means true; 0 means false
 
-    - symbol: HK_PX4_SensorAccelMsg_t
-      name: HK_PX4_SensorAccelMsg_t_YRaw
-      byte_offset: 38
-      type: int16
-      multiplicity: 0
-      little_endian: 1 # 1 means true; 0 means false
+  - symbol: HK_PX4_SensorAccelMsg_t
+    name: HK_PX4_SensorAccelMsg_t_XRaw
+    byte_offset: 36
+    type: int16
+    multiplicity: 0
+    little_endian: 1 # 1 means true; 0 means false
 
-    - symbol: HK_PX4_SensorAccelMsg_t
-      name: HK_PX4_SensorAccelMsg_t_ZRaw
-      byte_offset: 40
-      type: int16
-      multiplicity: 0
-      little_endian: 1 # 1 means true; 0 means false
+  - symbol: HK_PX4_SensorAccelMsg_t
+    name: HK_PX4_SensorAccelMsg_t_YRaw
+    byte_offset: 38
+    type: int16
+    multiplicity: 0
+    little_endian: 1 # 1 means true; 0 means false
 
-    - symbol: HK_PX4_SensorAccelMsg_t
-      name: HK_PX4_SensorAccelMsg_t_TemperatureRaw
-      byte_offset: 42
-      type: int16
-      multiplicity: 0
-      little_endian: 1 # 1 means true; 0 means false
+  - symbol: HK_PX4_SensorAccelMsg_t
+    name: HK_PX4_SensorAccelMsg_t_ZRaw
+    byte_offset: 40
+    type: int16
+    multiplicity: 0
+    little_endian: 1 # 1 means true; 0 means false
 
-    - symbol: HK_PX4_SensorAccelMsg_t
-      name: HK_PX4_SensorGyroMsg_tTimestamp
-      byte_offset: 44
-      type: uint64
-      multiplicity: 0
-      little_endian: 1 # 1 means true; 0 means false
+  - symbol: HK_PX4_SensorAccelMsg_t
+    name: HK_PX4_SensorAccelMsg_t_TemperatureRaw
+    byte_offset: 42
+    type: int16
+    multiplicity: 0
+    little_endian: 1 # 1 means true; 0 means false
 
-    - symbol: HK_PX4_SensorAccelMsg_t
-      name: HK_PX4_SensorGyroMsg_t_ErrorCount
-      byte_offset: 52
-      type: uint64
-      multiplicity: 0
-      little_endian: 1 # 1 means true; 0 means false
+  - symbol: HK_PX4_SensorAccelMsg_t
+    name: HK_PX4_SensorGyroMsg_tTimestamp
+    byte_offset: 44
+    type: uint64
+    multiplicity: 0
+    little_endian: 1 # 1 means true; 0 means false
 
-    - symbol: HK_PX4_SensorAccelMsg_t
-      name: HK_PX4_SensorGyroMsg_t_Temperature
-      byte_offset: 60
-      type: float
-      multiplicity: 0
-      little_endian: 1 # 1 means true; 0 means false
+  - symbol: HK_PX4_SensorAccelMsg_t
+    name: HK_PX4_SensorGyroMsg_t_ErrorCount
+    byte_offset: 52
+    type: uint64
+    multiplicity: 0
+    little_endian: 1 # 1 means true; 0 means false
 
-    - symbol: HK_PX4_SensorAccelMsg_t
-      name: HK_PX4_SensorGyroMsg_t_XRaw
-      byte_offset: 64
-      type: int16
-      multiplicity: 0
-      little_endian: 1 # 1 means true; 0 means false
+  - symbol: HK_PX4_SensorAccelMsg_t
+    name: HK_PX4_SensorGyroMsg_t_Temperature
+    byte_offset: 60
+    type: float
+    multiplicity: 0
+    little_endian: 1 # 1 means true; 0 means false
 
-    - symbol: HK_PX4_SensorAccelMsg_t
-      name: HK_PX4_SensorGyroMsg_t_YRaw
-      byte_offset: 66
-      type: int16
-      multiplicity: 0
-      little_endian: 1 # 1 means true; 0 means false
+  - symbol: HK_PX4_SensorAccelMsg_t
+    name: HK_PX4_SensorGyroMsg_t_XRaw
+    byte_offset: 64
+    type: int16
+    multiplicity: 0
+    little_endian: 1 # 1 means true; 0 means false
 
-    - symbol: HK_PX4_SensorAccelMsg_t
-      name: HK_PX4_SensorGyroMsg_t_ZRaw
-      byte_offset: 68
-      type: int16
-      multiplicity: 0
-      little_endian: 1 # 1 means true; 0 means false
+  - symbol: HK_PX4_SensorAccelMsg_t
+    name: HK_PX4_SensorGyroMsg_t_YRaw
+    byte_offset: 66
+    type: int16
+    multiplicity: 0
+    little_endian: 1 # 1 means true; 0 means false
 
-    - symbol: HK_PX4_SensorAccelMsg_t
-      name: HK_PX4_SensorMagMsg_t_Timestamp
-      byte_offset: 70
-      type: uint64
-      multiplicity: 0
-      little_endian: 1 # 1 means true; 0 means false
+  - symbol: HK_PX4_SensorAccelMsg_t
+    name: HK_PX4_SensorGyroMsg_t_ZRaw
+    byte_offset: 68
+    type: int16
+    multiplicity: 0
+    little_endian: 1 # 1 means true; 0 means false
 
-    - symbol: HK_PX4_SensorAccelMsg_t
-      name: HK_PX4_SensorMagMsg_t_ErrorCount
-      byte_offset: 78
-      type: uint64
-      multiplicity: 0
-      little_endian: 1 # 1 means true; 0 means false
+  - symbol: HK_PX4_SensorAccelMsg_t
+    name: HK_PX4_SensorMagMsg_t_Timestamp
+    byte_offset: 70
+    type: uint64
+    multiplicity: 0
+    little_endian: 1 # 1 means true; 0 means false
 
-    - symbol: HK_PX4_SensorAccelMsg_t
-      name: HK_PX4_SensorMagMsg_t_Temperature
-      byte_offset: 86
-      type: float
-      multiplicity: 0
-      little_endian: 1 # 1 means true; 0 means false
+  - symbol: HK_PX4_SensorAccelMsg_t
+    name: HK_PX4_SensorMagMsg_t_ErrorCount
+    byte_offset: 78
+    type: uint64
+    multiplicity: 0
+    little_endian: 1 # 1 means true; 0 means false
 
-    - symbol: HK_PX4_SensorAccelMsg_t
-      name: HK_PX4_SensorMagMsg_t_XRaw
-      byte_offset: 90
-      type: int16
-      multiplicity: 0
-      little_endian: 1 # 1 means true; 0 means false
+  - symbol: HK_PX4_SensorAccelMsg_t
+    name: HK_PX4_SensorMagMsg_t_Temperature
+    byte_offset: 86
+    type: float
+    multiplicity: 0
+    little_endian: 1 # 1 means true; 0 means false
 
-    - symbol: HK_PX4_SensorAccelMsg_t
-      name: HK_PX4_SensorMagMsg_t_YRaw
-      byte_offset: 92
-      type: int16
-      multiplicity: 0
-      little_endian: 1 # 1 means true; 0 means false
+  - symbol: HK_PX4_SensorAccelMsg_t
+    name: HK_PX4_SensorMagMsg_t_XRaw
+    byte_offset: 90
+    type: int16
+    multiplicity: 0
+    little_endian: 1 # 1 means true; 0 means false
 
-    - symbol: HK_PX4_SensorAccelMsg_t
-      name: HK_PX4_SensorMagMsg_t_ZRaw
-      byte_offset: 94
-      type: int16
-      multiplicity: 0
-      little_endian: 1 # 1 means true; 0 means false
+  - symbol: HK_PX4_SensorAccelMsg_t
+    name: HK_PX4_SensorMagMsg_t_YRaw
+    byte_offset: 92
+    type: int16
+    multiplicity: 0
+    little_endian: 1 # 1 means true; 0 means false
 
-    - symbol: HK_PX4_SensorBaroMsg_t
-      name: HK_PX4_SensorAccelMsg_t_Spare1
-      byte_offset: 12
-      type: uint32
-      multiplicity: 0
-      little_endian: 1 # 1 means true; 0 means false
+  - symbol: HK_PX4_SensorAccelMsg_t
+    name: HK_PX4_SensorMagMsg_t_ZRaw
+    byte_offset: 94
+    type: int16
+    multiplicity: 0
+    little_endian: 1 # 1 means true; 0 means false
 
-    - symbol: HK_PX4_SensorBaroMsg_t
-      name: HK_PX4_SensorBaroMsg_t_TimeStamp
-      byte_offset: 16
-      type: uint64
-      multiplicity: 0
-      little_endian: 1 # 1 means true; 0 means false
+  - symbol: HK_PX4_SensorBaroMsg_t
+    name: HK_PX4_SensorAccelMsg_t_Spare1
+    byte_offset: 12
+    type: uint32
+    multiplicity: 0
+    little_endian: 1 # 1 means true; 0 means false
 
-    - symbol: HK_PX4_SensorBaroMsg_t
-      name: HK_PX4_SensorBaroMsg_t_ErrorCount
-      byte_offset: 24
-      type: uint32
-      multiplicity: 0
-      little_endian: 1 # 1 means true; 0 means false
+  - symbol: HK_PX4_SensorBaroMsg_t
+    name: HK_PX4_SensorBaroMsg_t_TimeStamp
+    byte_offset: 16
+    type: uint64
+    multiplicity: 0
+    little_endian: 1 # 1 means true; 0 means false
 
-    - symbol: HK_PX4_SensorBaroMsg_t
-      name: HK_PX4_SensorBaroMsg_t_Pressure
-      byte_offset: 28
-      type: float
-      multiplicity: 0
-      little_endian: 1 # 1 means true; 0 means false
+  - symbol: HK_PX4_SensorBaroMsg_t
+    name: HK_PX4_SensorBaroMsg_t_ErrorCount
+    byte_offset: 24
+    type: uint32
+    multiplicity: 0
+    little_endian: 1 # 1 means true; 0 means false
 
-    - symbol: HK_PX4_SensorBaroMsg_t
-      name: HK_PX4_SensorBaroMsg_t_Temperature
-      byte_offset: 32
-      type: float
-      multiplicity: 0
-      little_endian: 1 # 1 means true; 0 means false
+  - symbol: HK_PX4_SensorBaroMsg_t
+    name: HK_PX4_SensorBaroMsg_t_Pressure
+    byte_offset: 28
+    type: float
+    multiplicity: 0
+    little_endian: 1 # 1 means true; 0 means false
 
-  telemetry:
+  - symbol: HK_PX4_SensorBaroMsg_t
+    name: HK_PX4_SensorBaroMsg_t_Temperature
+    byte_offset: 32
+    type: float
+    multiplicity: 0
+    little_endian: 1 # 1 means true; 0 means false
+
+telemetry:
     - name: HK_COMBINED_PKT1_MID
       message_id: 0x0994
       symbol: HK_PX4_SensorAccelMsg_t
