--- a/remap.yaml
+++ b/remap.yaml
@@ -5,4 +5,5 @@ remaps:
   # CFE_ES_MemHandle_t is a void* that is wrapped in a macro. For now we are assuming 32-bit void*, which is the word size
   # of our machine. You can get this number in linux with the 'getconf WORD_BIT' command.
   CFE_ES_MemHandle_t: uint32
+  CFE_SB_PipeId_t: uint8
 
