--- a/.travis.yml
+++ b/.travis.yml
@@ -18,9 +18,10 @@ install:
   - sudo apt-get -y install libsqlite3-dev
   - sudo apt-get -y install --reinstall make
   - sudo apt install build-essential
+  - cd src
   - pip3 install -r requirements.txt
-  - pip3 install -r tlm_cmd_merger/requirements.txt
-  - pip3 install -r xtce_generator/requirements.txt
+  - pip3 install -r ../tlm_cmd_merger/requirements.txt
+  - pip3 install -r ../xtce_generator/requirements.txt
 
 script:
   pytest
